Fix donate button visibility in header

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1011,17 +1011,10 @@ body {
 
 
 .header-top {
-
-
-
     display: flex;
-
-
-
     align-items: center;
-
-
-
+    justify-content: space-between;
+    margin-bottom: 15px;
 }
 
 
